fix one block selection search bug ;)

BUG: 97140

svn path=/branches/KDE/3.5/kdelibs/; revision=467563